apps/kube/agones/friendslop/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: friendslop
    labels:
        app.kubernetes.io/part-of: friendslop
        kbve.com/stack: agones
